# tandoor_importer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  appsettings.template.json
.github/: dependabot.yml
.github/workflows/: BuildAndTest.yml  Release.yml  build.yml  release-binaries.yml  release-please.yml
src/: main.rs
src/models/: command_line_arguments.rs  configuration.rs  mod.rs
src/models/tandoor/: api_tandoor_endpoints.rs  api_tandoor_food.rs  api_tandoor_food_property.rs  api_tandoor_food_response.rs  api_tandoor_property.rs  api_tandoor_property_response.rs  internal_tandoor_food.rs  internal_tandoor_food_api_response.rs  internal_tandoor_food_property.rs  internal_tandoor_property.rs  internal_tandoor_property_api_response.rs  mod.rs
src/models/usda/: mod.rs  usda_api_response.rs  usda_food.rs  usda_nutrient.rs  usda_nutrient_information.rs
