[package]
name = "tandoor_importer"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1.10.6"
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.32", features = ["derive"] }
