[package]
name = "tandoor_importer"
version = "2.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1.11.1"
log = "0.4.27"
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.6"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
